# crabocr

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  release.sh  wrapper_mupdf.h
src/: cli.rs  errors.rs  input.rs  logging.rs  main.rs  ocr.rs  renderer.rs  wrapper.c  wrapper.h  xfa.rs
